Fix topnav margin: Remove white space by targeting body element instead of .body class

--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,9 @@
   font-weight: bold;
 }
 
-.body {
+body {
   margin: 0;
+  padding: 0;
 }
 
 .navbar {
